testdata/baselines/reference/submodule/conformance/templateStringInObjectLiteralES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
templateStringInObjectLiteralES6.ts(3,5): error TS1136: Property assignment expected.
templateStringInObjectLiteralES6.ts(3,8): error TS1005: ',' expected.
templateStringInObjectLiteralES6.ts(3,10): error TS1134: Variable declaration expected.
templateStringInObjectLiteralES6.ts(4,1): error TS1128: Declaration or statement expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== templateStringInObjectLiteralES6.ts (4 errors) ====
    var x = {
        a: `abc${ 123 }def`,
        `b`: 321
        ~~~
!!! error TS1136: Property assignment expected.
           ~
!!! error TS1005: ',' expected.
             ~~~
!!! error TS1134: Variable declaration expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.